fix: remove redundant CSS selector and adjust vertical alignment

--- a/src/main/resources/static/resources/css/petclinic.css
+++ b/src/main/resources/static/resources/css/petclinic.css
@@ -2867,7 +2867,7 @@ textarea.form-control-lg {
 .dropend .dropdown-toggle::after {
   display: inline-block;
   margin-left: 0.255em;
-  vertical-align: 0.255em;
+  vertical-align: 0;
   content: "";
   border-top: 0.3em solid transparent;
   border-right: 0;
@@ -2876,9 +2876,6 @@ textarea.form-control-lg {
 
 .dropend .dropdown-toggle:empty::after {
   margin-left: 0; }
-
-.dropend .dropdown-toggle::after {
-  vertical-align: 0; }
 
 .dropstart .dropdown-menu[data-bs-popper] {
   top: 0;
